// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credits dark theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(230, 225, 229, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      Questions by The Open Trivia Database
    </Text>
    <Text
      onPress={[Function]}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(230, 225, 229, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            [
              {
                "paddingBottom": 10,
                "textAlign": "center",
              },
              {
                "color": "#fff",
                "textDecorationLine": "underline",
              },
            ],
          ],
        ]
      }
    >
      Game by www.LouieChristie.com
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Credits light theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            {
              "paddingBottom": 10,
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      Questions by The Open Trivia Database
    </Text>
    <Text
      onPress={[Function]}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            [
              {
                "paddingBottom": 10,
                "textAlign": "center",
              },
              {
                "color": "#0051E7",
                "textDecorationLine": "underline",
              },
            ],
          ],
        ]
      }
    >
      Game by www.LouieChristie.com
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
